# mcp-scanner

./: Cargo.toml
.github/workflows/: release.yml  security.yml
src/scanner/threats/: permission_scope.rs
